  - Correct support for re-using an S2S connection for multiple source
    domains. (Adrian Ulrich <slack@blinkenlights.ch>)

  - Jacob Burkhart <igotimac@gmail.com>: Fix memory leak when using SSL

  - Michael Scherer <misc@mandriva.org>: more helpful error
    messages in logs after dialback failure (shows hosts in question)

  - Piers Harding <piers@ompka.net>: Fix bug where server wasn't
    including a "from" attribute in IQ responses.

  - Multiple resources of the same local JID are now made aware of
    one another via presence stanzas as required by the spec.

  - don't leak UDP sockets on DNS SRV lookup timeouts

  - handle improper SSL disconnects without spinning CPU

  - Updated DJabberd::Component::Example which uses the correct
    API. The previous example didn't actually work anymore.

  - Add POD for DJabberd::Agent, DJabberd::Component and a bunch of
    other related modules.

  - Make bots automatically accept roster subscription requests.

0.83  2007-05-08
  - the "yes, this project is still alive" release

  - packaging fixes, tree clean, dist now managed by ShipIt, for more
    regular releases

  - ClientPort, ServerPort, AdminPort can include IPs to bind to, not
    just port numbers.

  - better pidfile support

  - optional expansion of environment in config files, using
    syntax:  ${ENV:KEY}, which expands to environment variable KEY

  - vhost/server/plugin nesting issues in config files.  more
    tolerant now

  - DJabberd::Delivery::ComponentConnection - Delivery through a
    JEP-0114 component connection

  - DJabberd::Connection::ComponentIn - JEP-0114 Server

  - DJabberd::Connection::ComponentOut - JEP-0114 Client

  - when closing an XMLElement, also clone the raw field

  - don't crash when DNS SRV records have no port defined

  - Component::External bug fixes, enhancements

  - warnings about implicit delivery/etc plugins auto-added
    for you (like Local deliver, S2S deliver, local presence
    checks, etc...)
